--- a/a_star/A_star.ipynb
+++ b/a_star/A_star.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 21,
    "id": "6f08f262",
    "metadata": {},
    "outputs": [],
@@ -61,22 +61,24 @@
     "            while (parents[n] != n):\n",
     "                path.append (n)\n",
     "                n = parents[n]\n",
-    "                \n",
+    "\n",
     "            path.append (start_node)\n",
-    "            \n",
+    "\n",
     "            path.reverse ()\n",
-    "            \n",
+    "\n",
     "            print (\"path is : {}\".format (path))\n",
     "            return None\n",
     "        open_set.remove (n)\n",
     "        closed_set.add (n)\n",
+    "        print (n)\n",
+    "        print (open_set)\n",
     "    print (\"Path does not exist 2\")\n",
     "    return None"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 22,
    "id": "90c5e07e",
    "metadata": {},
    "outputs": [],
@@ -96,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 23,
    "id": "6466b38a",
    "metadata": {},
    "outputs": [],
@@ -114,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 24,
    "id": "111ff6ab",
    "metadata": {},
    "outputs": [],
@@ -128,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 25,
    "id": "47b23288",
    "metadata": {},
    "outputs": [
@@ -136,6 +138,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "S\n",
+      "{'B', 'C'}\n",
+      "C\n",
+      "{'E', 'D', 'B'}\n",
+      "D\n",
+      "{'E', 'B'}\n",
+      "E\n",
+      "{'B', 'G'}\n",
+      "B\n",
+      "{'G', 'F'}\n",
       "path is : ['S', 'C', 'D', 'E', 'G']\n"
      ]
     }
